Twitter streaming (#2)
* Add a a twitter streaming library and configure it to get it working easily

* Get a first version filtering 0 tweets but working

* Get the twitter streaming example working

* Format code

* Get the streaming working using application.conf files

* Replace pprint usage with the logger

* Update project documentation

* Replace patter matching with toOption function in Try