@@ -7,12 +7,15 @@ mainClass in assembly := Some("com.github.pedrovgs.roma.RomaApplication")
 enablePlugins(ScalafmtPlugin)
 CommandAliases.addCommandAliases()
 
-libraryDependencies ++=  Seq(
+libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-core" % Versions.spark % Provided,
   "org.apache.spark" %% "spark-streaming" % Versions.spark % Provided,
   "org.apache.spark" %% "spark-sql" % Versions.spark % Provided,
   "org.apache.spark" %% "spark-mllib" % Versions.spark % Provided,
-  "com.lihaoyi" %% "pprint" % Versions.pprint
+  "com.lihaoyi" %% "pprint" % Versions.pprint,
+  "org.apache.bahir" %% "spark-streaming-twitter" % Versions.sparkStreamingTwitter,
+  "com.typesafe" % "config" % Versions.config
+
 )
 
 libraryDependencies ++= Seq(
@@ -22,3 +25,18 @@ libraryDependencies ++= Seq(
   "com.holdenkarau" %% "spark-testing-base" % Versions.sparkTestingBase % Test
 )
 
+import sbtassembly.MergeStrategy
+
+assemblyMergeStrategy in assembly := {
+  case PathList("org", "apache", "spark", "unused", "UnusedStubClass.class") => MergeStrategy.first
+  case PathList("META-INF", _) => MergeStrategy.discard
+  case _ => MergeStrategy.first
+}
+
+
+test in assembly := {}
+fork in Test := true
+parallelExecution in Test := false
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+
+assemblyOption in assembly := (assemblyOption in assembly).value.copy(includeScala = false)
